Fix Navbar Menu Overlapping on the text on Home Section

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -8,7 +8,6 @@ html {
 
 body {
   font-family: 'Inter';
-  padding-top: 90px;
 }
 
 .noSelect {
